--- a/app/views/static_pages/skills.html.erb
+++ b/app/views/static_pages/skills.html.erb
@@ -7,8 +7,8 @@
 </div>-->
 
 <div id="skills_page">
-  <div id="skills_left_pane">
-    <div id="line">
+  <div class="left_pane">
+    <div class="line">
       <h1 id="headline1">Skills</h1>
       <h1 id="ampersand">&</h1>
     </div>
@@ -27,7 +27,7 @@
 
 <script>
   var image = document.createElement('img');
-  var left_pane = document.querySelector('#skills_left_pane');
+  var left_pane = document.querySelector('.left_pane');
   var bullets = left_pane.querySelectorAll('li');
 
   var urls = new Object();
