--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -137,79 +137,12 @@ p {
   line-height: 75px;
 }
 
-.navbar #home {
-  margin: 0 auto;
-  background-image: url("spritesheet.png");
-  background-position: -1px -368px;
-}
-
-.navbar #home_green {
-  margin: 0 auto;
-  background-image: url("spritesheet.png");
-  background-position: -1px -431px;
-}
-
-.navbar #about {
-  top: 56px;
-  background-image: url("spritesheet.png");
-  background-position: -1px -5.5px;
-}
-
-.navbar #about_green {
-  top: 56px;
-  background-image: url("spritesheet.png");
-  background-position: -1px -68.5px;
-}
-
-.navbar #skills {
-  top: 112px;
-  background-image: url("spritesheet.png");
-  background-position: -1px -839.5px;
-}
-
-.navbar #skills_green {
-  top: 112px;
-  background-image: url("spritesheet.png");
-  background-position: -1px -902.5px;
-}
-
-.navbar #my_work {
-  top: 168px;
-  background-image: url("spritesheet.png");
-  background-position: -1px -604px;
-}
-
-.navbar #my_work_green {
-  top: 168px;
-  background-image: url("spritesheet.png");
-  background-position: -1px -667px;
-}
-
-.navbar #contact {
-  top: 219px;
-  background-image: url("spritesheet.png");
-  background-position: -1px -132px;
-}
-
-.navbar #contact_green {
-  top: 219px;
-  background-image: url("spritesheet.png");
-  background-position: -1px -195px;
-}
-
 .navbar #button_panel {
   position: absolute;
   top: 50%;
   margin-top: -135px;
   width: 60px;
   height: 270px;
-}
-
-.navbar .buttons {
-  position: absolute;
-  /*background-size: 22px 23px;*/
-  width: 60px;
-  height: 51px;
 }
 
 #button_panel a {
@@ -246,57 +179,10 @@ p {
   height: 120px;
 }
 
-.navbar ul li {
-  display: block;
-  width: 60px;
-  height: 30px;
-  background-repeat: no-repeat;
-}
-
 ul a {
   display: block;
   width: 60px;
   height: 30px;
-}
-
-#twitter {
-  background-image: url("spritesheet.png");
-  background-position: 0px -975px;
-}
-
-#twitter:hover {
-  background-image: url("spritesheet.png");
-  background-position: 0px -1035px;
-}
-
-#linkedin {
-  background-image: url("spritesheet.png");
-  background-position: 3px -500px;
-}
-
-#linkedin:hover {
-  background-image: url("spritesheet.png");
-  background-position: 3px -555px;
-}
-
-#facebook {
-  background-image: url("spritesheet.png");
-  background-position: 3px -264px;
-}
-
-#facebook:hover {
-  background-image: url("spritesheet.png");
-  background-position: 3px -319px;
-}
-
-#rss {
-  background-image: url("spritesheet.png");
-  background-position: 3px -736px;
-}
-
-#rss:hover {
-  background-image: url("spritesheet.png");
-  background-position: 3px -791px;
 }
 
 #silver_star {
@@ -330,7 +216,7 @@ ul a {
   justify-content: center;
 }
 
-#skills_left_pane {
+.left_pane {
   order: 1;
   display: flex;
   flex-flow: column;
@@ -349,13 +235,13 @@ ul a {
   justify-content: center;
 }
 
-#skills_left_pane ul {
+.left_pane ul {
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
 }
 
-#skills_left_pane li {
+.left_pane li {
   font-family: "Montserrat", sans-serif;
   font-size: 0.85em;
   font-weight: bold;
@@ -370,7 +256,7 @@ ul a {
   right: 3px;
 }
 
-#skills_left_pane h1 {
+.left_pane h1 {
   font-size: 4.1em !important;
   text-align: left;
   margin: 0;
@@ -378,22 +264,22 @@ ul a {
   font-size: 48px;
 }
 
-#skills_left_pane #headline1 {
+.left_pane #headline1 {
   float: left;
   color: #f65026;
 }
 
-#skills_left_pane #ampersand {
+.left_pane #ampersand {
   float: right;
   position: relative;
   right: 207px;
 }
 
-#skills_left_pane #headline2 {
+.left_pane #headline2 {
   color: #98ff98;
 }
 
-#skills_left_pane p {
+.left_pane p {
   text-align: left;
   margin-top: 10px;
   margin-bottom: 26px;
@@ -409,4 +295,24 @@ ul a {
 
 #skills_project_img img {
   height: 50%; /*60%*/
+}
+
+#about_page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+}
+
+#about_page #about {
+  float: left;
+  color: #98ff98;
+}
+
+#about_page #me {
+  float: right;
+  position: relative;
+  right: 147px;
+  color: #f65026;
 }
