--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,10 @@
 <div class="page">
   <div id="intro">
-    <h1>John Marks, Web Developer.</h1>
+    <h1 id="john_marks">John Marks, Web Developer.</h1>
+    <p>I would love to help create your website or application.</p>
     <p>Front-to-back, design-to-deployment web development services.</p>
     <p>Please check out my latest projects on the <b>my works</b> page.</p>
     <p>Or drop me an email at <b>johnjmarks4@gmail.com</b>.</p>
-    <p>I would love to make your site or application.</p>
     <%= link_to "CONTACT ME", contact_path, id: "contact_me" %>
   </div>
 </div>
