--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -5,7 +5,7 @@
   </div>
   <p>Feel free to send me any questions using the form below.</p>
 
-  <%= form_tag "#", id: "contact_form" do %>
+  <%= form_tag "https://formspree.io/johnjmarks4@gmail.com", id: "contact_form" do %>
     <%= text_field_tag :name, "Name", onfocus: "inputFocus(this)", onblur: "inputBlur(this)" %>
     <%= email_field_tag :email, "Email", onfocus: "inputFocus(this)", onblur: "inputBlur(this)" %>
     <%= text_field_tag :subject, "Subject", onfocus: "inputFocus(this)", onblur: "inputBlur(this)" %>
