--- a/app/views/static_pages/skills.html.erb
+++ b/app/views/static_pages/skills.html.erb
@@ -5,10 +5,12 @@
       <h1 id="ampersand">&</h1>
     </div>
     <h1 id="headline2">Experience</h1>
-    <p>All of the experience I have gained.</p>
+    <p>Press a highlighted button to see a project.</p>
     <ul>
       <% @skills.each do |skill| %>
-        <%= content_tag(:li, skill.upcase, id: skill.gsub(/ /, '_')) %>
+        <% @highlighted.include?(skill) ? hl = "highlight" : hl = "no_highlight" %>
+        <%= content_tag(:li, skill.upcase, id: skill.gsub(/ /, '_'), class: hl,
+                        onclick: "lightButton(this)") %>
       <% end %>
     </ul>
   </div>
@@ -16,6 +18,20 @@
     <div id="skills_project_img"></div>
   </div>
 </div>
+
+<script>
+  function lightButton(i) {
+    var previous = document.querySelector('.selected');
+
+    if (previous != null && previous.id != i.id) {
+      previous.className = "highlight";
+    };
+
+    if (i.className == "highlight") {
+      i.className = "selected";
+    };
+  };
+</script>
 
 <script>
   var image = document.createElement('img');
@@ -26,11 +42,16 @@
   
   urls['ruby_on_rails'] = 'https://arcane-stream-86572.herokuapp.com';
   urls['object-oriented_programming'] = 'https://github.com/johnjmarks4/chess';
+  urls['tdd'] = 'https://github.com/johnjmarks4/chess/blob/master/specs/game_spec.rb';
+  urls['cs_fundamentals'] = 'https://github.com/johnjmarks4/n_queens';
 
   bullets.forEach( (bullet) => {
     bullet.addEventListener('click', function() {
       var image_name = bullet.id;
       var link = document.createElement('a');
+      if (image_name == "css3" || image_name == "html5") {
+        var image_name = "ruby_on_rails";
+      }
       var href = urls[image_name];
       link.setAttribute('href', href);
       console.log(image_name);
