--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,23 +5,21 @@
       <h1 id="me">Me</h1>
     </div>
     <p>
-      xxxxxxxxxxxxxxxxxxxxxxxxxxxx
-      xxxxxxxxxxxxxxxxxxxxxxxxxxxx
-      xxxxxxxxxxxxxxxxxxxxxxxxxxxx
-      xxxxxxxxxxxxxxxxxxxxxxxxxxxx
-      xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+      I love all aspects of programming, but my main interests are front-end development, UI, and applying creativity to code.
     </p>
 
-    <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxx
-       xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+    <p>
+      I currently do freelance development for small businesses. I enjoy working with customers to learn what they want, then turning that into efficient, well-designed sites.
     </p>
 
-    <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+    <p>I currently reside in the Chicago area.</p>
+
+    <p>
+      xxxxxxxxxxxxxxxx
     </p>
 
-    <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxx
-       xxxxxxxxxxxxxxxxxxxxxxxxxxxx
-       xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+    <p>
+      In my free time, I like to contribute to open-source projects and continue to grow my knowledge of new technologies.
     </p>
 
   </div>
