--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,21 +1,22 @@
 <div id="about_page">
-  <div class="left_pane">
+  <div id="about_left_pane" class="left_pane">
     <div class="line">
       <h1 id="about">About</h1>
       <h1 id="me">Me</h1>
     </div>
+
+    <p> I'm a Chicago-based freelancer.</p>
+
     <p>
       I love all aspects of programming, but my main interests are front-end development, UI, and applying creativity to code.
     </p>
 
     <p>
-      I currently do freelance development for small businesses. I enjoy working with customers to learn what they want, then turning that into efficient, well-designed sites.
+      My skills range from design, to Javascript, to Ruby on Rails.
     </p>
 
-    <p>I currently reside in the Chicago area.</p>
-
     <p>
-      xxxxxxxxxxxxxxxx
+      I currently do freelance development for small businesses. I enjoy helping businesses develop a web presence, ... then turning that into efficient, well-designed sites.
     </p>
 
     <p>
