--- a/app/views/static_pages/my_work.html.erb
+++ b/app/views/static_pages/my_work.html.erb
@@ -2,7 +2,7 @@
   <%= render "navbar" %>
 </div>
 
-<div id="center_column">
+<div id="my_work_page">
   <div class="sample_containers" id="sample_container1">
     <%= link_to image_tag("ruby_on_rails2"), "http://arcane-stream-86572.herokuapp.com/" %>
     <%= link_to "http://arcane-stream-86572.herokuapp.com/", class: "sample_description" do %>
