--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -680,3 +680,38 @@ li.selected {
     min-height: 241.39px;
   }
 }
+
+/* ----------- iPhone 8 ----------- */
+
+@media only screen and (max-width: 375px) and (max-height: 667px) {
+
+  body, html { overflow: hidden; }
+
+  body { top: 60px; }
+
+  .navbar {
+    width: 100%;
+    height: 60px;
+  }
+
+  .navbar #header_toggler {
+    float: right;
+    width: 60px;
+    height: 60px;
+    background-image: url("horizontal");
+  }
+
+  .navbar #button_panel {
+    display: none;
+  }
+
+  .navbar ul {
+    display: none;
+  }
+
+  .navbar #logo {
+    float: left;
+    height: 60px;
+    width: 60px;
+  }
+}
