--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -2,43 +2,45 @@
   <div id="logo"></div>
 </div>
 
-<table id="button_panel"> 
-  <%= content_tag(:tr, class: "buttons", id: on_page("home")) do -%>
-    <td class="button_transform">
-      <td>
-        <%= link_to "HOME", root_path, class: "text_display" %>
+<div id="header_toggler">
+  <table id="button_panel"> 
+    <%= content_tag(:tr, class: "buttons", id: on_page("home")) do -%>
+      <td class="button_transform">
+        <td>
+          <%= link_to "HOME", root_path, class: "text_display" %>
+        </td>
       </td>
-    </td>
-  <% end -%>
-  <%= content_tag(:tr, class: "buttons", id: on_page("about")) do -%>
-    <td class="button_transform">
-      <td>
-        <%= link_to "ABOUT", about_path, class: "text_display" %>
+    <% end -%>
+    <%= content_tag(:tr, class: "buttons", id: on_page("about")) do -%>
+      <td class="button_transform">
+        <td>
+          <%= link_to "ABOUT", about_path, class: "text_display" %>
+        </td>
       </td>
-    </td>
-  <% end -%>
-  <%= content_tag(:tr, class: "buttons", id: on_page("skills")) do -%>
-    <td class="button_transform">
-      <td>
-        <%= link_to "SKILLS", skills_path, class: "text_display" %>
+    <% end -%>
+    <%= content_tag(:tr, class: "buttons", id: on_page("skills")) do -%>
+      <td class="button_transform">
+        <td>
+          <%= link_to "SKILLS", skills_path, class: "text_display" %>
+        </td>
       </td>
-    </td>
-  <% end %>
-  <%= content_tag(:tr, class: "buttons", id: on_page("my_work")) do -%>
-    <td class="button_transform">
-      <td>
-        <%= link_to "MY WORK", my_work_path, class: "text_display" %>
+    <% end %>
+    <%= content_tag(:tr, class: "buttons", id: on_page("my_work")) do -%>
+      <td class="button_transform">
+        <td>
+          <%= link_to "MY WORK", my_work_path, class: "text_display" %>
+        </td>
       </td>
-    </td>
-  <% end -%>
-  <%= content_tag(:tr, class: "buttons", id: on_page("contact")) do -%>
-    <td class="button_transform">
-      <td>
-        <%= link_to "CONTACT", contact_path, class: "text_display" %>
+    <% end -%>
+    <%= content_tag(:tr, class: "buttons", id: on_page("contact")) do -%>
+      <td class="button_transform">
+        <td>
+          <%= link_to "CONTACT", contact_path, class: "text_display" %>
+        </td>
       </td>
-    </td>
-  <% end -%>
-</table>
+    <% end -%>
+  </table>
+</div>
 
 <ul>
   <li id="twitter"><%= link_to "", "https://twitter.com/johnjmarks" %></li>
