--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -696,9 +696,13 @@ li.selected {
 
   .navbar #header_toggler {
     float: right;
-    width: 60px;
-    height: 60px;
+    height: 30px;
+    width: 25.7167px;
+    object-fit: contain;
     background-image: url("horizontal");
+    background-size: 30px;
+    margin-top: 15px;
+    margin-right: 15px;
   }
 
   .navbar #button_panel {
@@ -711,7 +715,7 @@ li.selected {
 
   .navbar #logo {
     float: left;
-    height: 60px;
+    height: 59px;
     width: 60px;
   }
 }
